<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/apptheme_window_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            tools:text="v1.0.0" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/apptheme_divider_light" />

        <TextView
            android:id="@+id/contactDeveloper"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/selector_dark"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:text="@string/title_contact_developer"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/openSourceLicenses"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/selector_dark"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:text="@string/title_open_source_licenses"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>