<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <LinearLayout
            android:id="@+id/appBarButtons"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:animateLayoutChanges="true"
            android:background="?colorPrimary"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/previousDay"
                style="@style/DaySwitchButton"
                app:srcCompat="@drawable/ic_chevron_left_black_24dp"
                tools:src="@drawable/ic_chevron_left_black_24dp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_light_rounded"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:textColor="@android:color/white"
                tools:text="@string/today" />

            <ImageView
                android:id="@+id/nextDay"
                style="@style/DaySwitchButton"
                app:srcCompat="@drawable/ic_chevron_right_black_24dp"
                tools:src="@drawable/ic_chevron_right_black_24dp" />
        </LinearLayout>
    </android.support.design.widget.AppBarLayout>

    <ViewFlipper
        android:id="@+id/flipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inAnimation="@android:anim/fade_in"
        android:outAnimation="@android:anim/fade_out"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/apptheme_primary_dark">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/errorImage"
                    android:layout_width="124dp"
                    android:layout_height="124dp"
                    android:layout_gravity="center_horizontal"
                    tools:src="@drawable/es_no_connection" />

                <TextView
                    android:id="@+id/errorTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    tools:text="Connection error" />

                <TextView
                    android:id="@+id/errorSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:alpha="0.6"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/white"
                    tools:text="@string/error_no_data_subtitle" />

                <TextView
                    android:id="@+id/retry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/selector_light_rounded"
                    android:fontFamily="sans-serif-medium"
                    android:padding="8dp"
                    android:text="@string/action_retry"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </FrameLayout>
    </ViewFlipper>
</android.support.design.widget.CoordinatorLayout>
